--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -4,17 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- CSS only -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="styles/index.css" />
+    <link rel="stylesheet" href="styles/main.css" />
     <title>CodeWithSK</title>
   </head>
   <body>
-    <div class="container-fluid">Cyclic :)</div>
+    <div class="w-full h-screen flex justify-center items-center">
+      <div class="bg-cyan-500 shadow-cyan-300 shadow-xl h-[30rem] mx-auto w-[20rem] rounded-lg grid place-items-center font-bold text-2xl text-white"> Cyclic :) </div>
+    </div>
   </body>
 </html>
